ws_controller/log/build_2025-08-22_12-17-50/flight_controller_pkg/stderr.log
  File "/home/dron/ws_controller/install/flight_controller_pkg/lib/python3.10/site-packages/flight_controller_pkg/fc_control.py", line 490
    msg = self.master.recv_match(type='HEARTBEAT', blocking=Falsetimeout=timeout)
                                                                        ^
SyntaxError: invalid syntax

